tests/baselines/reference/importsNotUsedAsValues_error(strict=true).errors.txt
error TS5102: Option 'importsNotUsedAsValues' has been removed. Please remove it from your configuration.
  Use 'verbatimModuleSyntax' instead.
/b.ts(4,13): error TS2454: Variable 'a' is used before being assigned.
/b.ts(4,16): error TS2454: Variable 'b' is used before being assigned.
/c.ts(4,13): error TS2454: Variable 'a' is used before being assigned.
/c.ts(4,16): error TS2454: Variable 'b' is used before being assigned.
/d.ts(4,16): error TS2454: Variable 'b' is used before being assigned.
/e.ts(1,1): error TS6192: All imports in import declaration are unused.
/g.ts(4,13): error TS2454: Variable 'c' is used before being assigned.
/g.ts(4,16): error TS2454: Variable 'd' is used before being assigned.


!!! error TS5102: Option 'importsNotUsedAsValues' has been removed. Please remove it from your configuration.
!!! error TS5102:   Use 'verbatimModuleSyntax' instead.
==== /a.ts (0 errors) ====
    export default class {}
    export class A {}
    export type B = {};
    export const enum C { One, Two }
    
==== /b.ts (2 errors) ====
    import { A, B } from './a'; // Error
    let a: A;
    let b: B;
    console.log(a, b);
                ~
!!! error TS2454: Variable 'a' is used before being assigned.
                   ~
!!! error TS2454: Variable 'b' is used before being assigned.
    
==== /c.ts (2 errors) ====
    import Default, * as named from './a'; // Error
    let a: Default;
    let b: named.B;
    console.log(a, b);
                ~
!!! error TS2454: Variable 'a' is used before being assigned.
                   ~
!!! error TS2454: Variable 'b' is used before being assigned.
    
==== /d.ts (1 errors) ====
    import Default, { A } from './a';
    const a = A;
    let b: Default;
    console.log(a, b);
                   ~
!!! error TS2454: Variable 'b' is used before being assigned.
    
==== /e.ts (1 errors) ====
    import { A, B } from './a'; // noUnusedLocals error only
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6192: All imports in import declaration are unused.
    
==== /f.ts (0 errors) ====
    import { C } from './a';
    import type { C as D } from './a';
    C.One;
    let c: D = C.Two;
    let d: D.Two = C.Two;
    console.log(c, d);
    
==== /g.ts (2 errors) ====
    import { C } from './a';
    let c: C;
    let d: C.Two;
    console.log(c, d);
                ~
!!! error TS2454: Variable 'c' is used before being assigned.
                   ~
!!! error TS2454: Variable 'd' is used before being assigned.
    
==== /h.ts (0 errors) ====
    class H {}
    export = H;
    
==== /i.ts (0 errors) ====
    import H = require('./h'); // Error
    let h: H = {};
    console.log(h);
    
==== /j.ts (0 errors) ====
    import H = require('./h'); // noUnusedLocals error only
    
==== /k.ts (0 errors) ====
    const enum K { One, Two }
    export = K;
    
==== /l.ts (0 errors) ====
    import K = require('./k');
    K.One;
    
==== /j.ts (0 errors) ====
    // Sad face https://github.com/microsoft/TypeScript/blob/6b04f5039429b9d412696fe2febe39ecc69ad365/src/testRunner/compilerRunner.ts#L207